# ninjascratch

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  wait-for-db.sh
k8s/backend/: config-map.yaml  deployment.yaml  secret.yaml  service.yaml
k8s/database/: deployment.yaml  pv-pvc.yaml  service.yaml
k8s/redis/: deployment.yaml
todolist/: asgi.py  settings.py  urls.py  utils.py
todolist/apps/: __init__.py
todolist/apps/base/: apps.py  models.py
todolist/apps/base/migrations/: 0001_initial.py
todolist/apps/people/: api.py  apps.py  views.py
todolist/apps/todos/: admin.py  api.py  apps.py  models.py  schemas.py  serializers.py  upload_api.py  urls.py  views.py
todolist/apps/todos/migrations/: 0001_initial.py  0002_alter_person_options_alter_todo_options_and_more.py  0002_alter_todo_location.py  0003_alter_todolist_owner.py  0004_alter_todo_location_alter_todo_notes.py  0005_alter_todolist_owner_delete_person.py
todolist/todolist/: settings.py
todolist/todos/: models.py
